{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 114,
  "lineage": "86cceaf1-13e7-acb8-49c2-2086c4debc4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4ef5d2a1efe45d9",
            "arn": "arn:aws:ec2:us-east-1:374198398518:elastic-ip/eipalloc-0e4ef5d2a1efe45d9",
            "association_id": "eipassoc-02171c848b35916b8",
            "domain": "vpc",
            "id": "eipalloc-0e4ef5d2a1efe45d9",
            "instance": "i-032cb2fc24f5aad28",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08db5b289328e555b",
            "private_dns": "ip-10-0-1-217.ec2.internal",
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-44-196-50-136.compute-1.amazonaws.com",
            "public_ip": "44.196.50.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "resume-screener-eip"
            },
            "tags_all": {
              "Name": "resume-screener-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.app",
            "aws_s3_bucket.resumes",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0102a36b3e9d5e4df",
            "arn": "arn:aws:ec2:us-east-1:374198398518:instance/i-032cb2fc24f5aad28",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "resume-screener-instance-profile",
            "id": "i-032cb2fc24f5aad28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08db5b289328e555b",
            "private_dns": "ip-10-0-1-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-3-237-233-74.compute-1.amazonaws.com",
            "public_ip": "3.237.233.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b185a14bbff4939",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f974c1dc9bc7c83",
            "tags": {
              "Name": "resume-screener-app"
            },
            "tags_all": {
              "Name": "resume-screener-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c4b743ea5ac7f6d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.main",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_s3_bucket.resumes",
            "aws_security_group.ec2",
            "aws_security_group.rds",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:internet-gateway/igw-04538507dfa7654e8",
            "id": "igw-04538507dfa7654e8",
            "owner_id": "374198398518",
            "tags": {
              "Name": "resume-screener-igw"
            },
            "tags_all": {
              "Name": "resume-screener-igw"
            },
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:route-table/rtb-06d35d3b7ae3d0780",
            "id": "rtb-06d35d3b7ae3d0780",
            "owner_id": "374198398518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04538507dfa7654e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-screener-rt-public"
            },
            "tags_all": {
              "Name": "resume-screener-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065b4c0de72af6e75",
            "route_table_id": "rtb-06d35d3b7ae3d0780",
            "subnet_id": "subnet-06f974c1dc9bc7c83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:security-group/sg-00c4b743ea5ac7f6d",
            "description": "Allow SSH and HTTP to EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c4b743ea5ac7f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8003
              },
              {
                "cidr_blocks": [
                  "102.182.15.4/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "resume-screener-ec2-sg",
            "name_prefix": "",
            "owner_id": "374198398518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-screener-ec2-sg"
            },
            "tags_all": {
              "Name": "resume-screener-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:security-group/sg-093ec0083f0974148",
            "description": "Allow PostgreSQL from EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093ec0083f0974148",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4b743ea5ac7f6d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "resume-screener-rds-sg",
            "name_prefix": "",
            "owner_id": "374198398518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-screener-rds-sg"
            },
            "tags_all": {
              "Name": "resume-screener-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:subnet/subnet-0dedffd69f2dfbfee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dedffd69f2dfbfee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374198398518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-screener-private-a"
            },
            "tags_all": {
              "Name": "resume-screener-private-a"
            },
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:subnet/subnet-013b8fe167386328c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013b8fe167386328c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374198398518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-screener-private-b"
            },
            "tags_all": {
              "Name": "resume-screener-private-b"
            },
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:subnet/subnet-06f974c1dc9bc7c83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f974c1dc9bc7c83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374198398518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-screener-public"
            },
            "tags_all": {
              "Name": "resume-screener-public"
            },
            "vpc_id": "vpc-0428d835b4beca42c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374198398518:vpc/vpc-0428d835b4beca42c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fba76691a2e1c0b3",
            "default_route_table_id": "rtb-09b445b3321c27245",
            "default_security_group_id": "sg-0ab382fb81df0b79b",
            "dhcp_options_id": "dopt-0f263945223622a41",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0428d835b4beca42c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b445b3321c27245",
            "owner_id": "374198398518",
            "tags": {
              "Name": "resume-screener-vpc"
            },
            "tags_all": {
              "Name": "resume-screener-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}